[#6ctyxw] - Removed 2 steps | Enables to use without document | Fixed spelling | Added filters

--- a/src/app/manage-indicators/approve-uploaded-indicators/approve-uploaded-indicators.component.html
+++ b/src/app/manage-indicators/approve-uploaded-indicators/approve-uploaded-indicators.component.html
@@ -26,7 +26,7 @@
           (nzCheckedChange)="updateAllChecked($event)"></th>
       <th nzShowFilter [nzFilters]="crsCodeFilter"
           (nzFilterChange)="addFilter('crsCode', $event)">
-        Crs Code
+        CRS Code
       </th>
       <th>Data Source</th>
       <th>Description</th>
@@ -34,7 +34,7 @@
       <th>Keywords</th>
       <th>Name</th>
       <th nzShowFilter [nzFilters]="sdgCodeFilter" (nzFilterChange)="addFilter('sdgCode', $event)">
-        Sdg Code
+        SDG Code
       </th>
       <th nzShowFilter [nzFilters]="sourceFilter" (nzFilterChange)="addFilter('source', $event)">
         Source
