--- a/src/app/manage-indicators/crud-indicator/crud-indicator.component.html
+++ b/src/app/manage-indicators/crud-indicator/crud-indicator.component.html
@@ -10,10 +10,10 @@
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
-          <nz-form-label [nzSpan]="7" nzFor="crsCode"><label for="crsCode">Crs code</label>
+          <nz-form-label [nzSpan]="7" nzFor="crsCode"><label for="crsCode">CRS code</label>
           </nz-form-label>
           <nz-form-control [nzSpan]="12">
-            <input nz-input [(ngModel)]="indicator.crsCode" id="crsCode" placeholder="Crs code"
+            <input nz-input [(ngModel)]="indicator.crsCode" id="crsCode" placeholder="CRS code"
                    name="crsCode" [disabled]="!(isEditing() || isNew())">
           </nz-form-control>
         </nz-form-item>
@@ -64,11 +64,11 @@
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
-          <nz-form-label [nzSpan]="7" nzFor="sdgCode"><label for="sdgCode">Sdg code</label>
+          <nz-form-label [nzSpan]="7" nzFor="sdgCode"><label for="sdgCode">SDG code</label>
           </nz-form-label>
           <nz-form-control [nzSpan]="12">
             <input nz-input [(ngModel)]="indicator.sdgCode" id="sdgCode" name="sdgCode"
-                   placeholder="Sdg code" [disabled]="!(isEditing() || isNew())">
+                   placeholder="SDG code" [disabled]="!(isEditing() || isNew())">
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
