--- a/src/app/manage-indicators/manage-indicators.component.html
+++ b/src/app/manage-indicators/manage-indicators.component.html
@@ -16,13 +16,13 @@
     <thead>
     <tr>
       <th>ID</th>
-      <th nzShowFilter [nzFilters]="crsCodeFilter" (nzFilterChange)="addFilter('crsCode', $event)">Crs Code</th>
+      <th nzShowFilter [nzFilters]="crsCodeFilter" (nzFilterChange)="addFilter('crsCode', $event)">CRS Code</th>
       <th>Data Source</th>
       <th>Description</th>
       <th>Disaggregation</th>
       <th>Keywords</th>
       <th>Name</th>
-      <th nzShowFilter [nzFilters]="sdgCodeFilter" (nzFilterChange)="addFilter('sdgCode', $event)">Sdg Code</th>
+      <th nzShowFilter [nzFilters]="sdgCodeFilter" (nzFilterChange)="addFilter('sdgCode', $event)">SDG Code</th>
       <th nzShowFilter [nzFilters]="sourceFilter" (nzFilterChange)="addFilter('source', $event)">Source</th>
       <th>Source Verification</th>
       <th nzShowFilter [nzFilters]="themeFilter" (nzFilterChange)="addFilter('themes', $event)">Themes</th>
