--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -71,26 +71,30 @@
       [nzData]="displayData"
       [nzPageSize]="displayData.length"
       [nzScroll]="{ y: '1000px' }"
+      [nzLoading]='showLoading'
       nzShowPagination="false"
       nzShowSizeChanger="false"
       nzSize="middle"
       nzBordered
     >
-      <thead (nzSortChange)="sort($event)" nzSingleSort>
+      <thead (nzSortOrderChange)="sort($event)"><!--TODO nzSingleSort-->
         <tr>
           <th
             nzShowCheckbox
             [(nzChecked)]="isAllDisplayDataChecked"
             [nzIndeterminate]="isIndeterminate"
             (nzCheckedChange)="checkAll($event)"
-            nzWidth="50px"
+            nzWidth="5%"
           ></th>
           <th
             nzShowSort
-            nzSortKey="level"
+            nzColumnKey="level"
             nz-tooltip
             nzTooltipTitle="Indicator level"
-            nzWidth="103px"
+            nzWidth="10%"
+            nzShowFilter
+            [nzFilters]="searchFilter.level"
+            [nzFilterFn]="filterLevel"
           >
             Level
           </th>
@@ -100,51 +104,71 @@
 
           <th
             nzShowSort
-            nzSortKey="source"
-            nzWidth="100px"
+            nzColumnKey="source"
+            nzWidth="10%"
             nz-tooltip
             nzTooltipTitle="Source"
+            nzShowFilter
+            [nzFilters]="searchFilter.source"
+            [nzFilterFn]="filterSource"
           >
             Source
           </th>
           <th
             nzShowSort
-            nzSortKey="disaggregation"
+            nzColumnKey="disaggregation"
             nz-tooltip
             nzTooltipTitle="Disaggregation"
-            nzWidth="100px"
+            nzWidth="10%"
             style="font-size: 10px;"
+            nzBreakWord
+            nzShowFilter
+            [nzFilters]="searchFilter.disaggregation"
+            [nzFilterFn]="filterDisag"
           >
-            Dis- aggregation
+            Disaggregation
           </th>
           <th
             nzShowSort
-            nzSortKey="themes"
-            nzWidth="100px"
+            nzColumnKey="themes"
+            nzWidth="10%"
             nz-tooltip
             nzTooltipTitle="Thematic Area"
+            nzBreakWord
+            nzShowFilter
+            [nzFilters]="searchFilter.themes"
+            [nzFilterFn]="filterThemes"
+
           >
             Thematic Area
           </th>
           <th
             nzShowSort
-            nzSortKey="crsCode"
+            nzColumnKey="crsCode"
             nz-tooltip
             nzTooltipTitle="OECD DAC/CRS Code"
-            nzWidth="100px"
+            nzWidth="10%"
+            nzBreakWord
+            nzShowFilter
+            [nzFilters]="searchFilter.crsCode"
+            [nzFilterFn]="filterCRSCode"
           >
             OECD DAC/CRS Code
           </th>
           <th
             nzShowSort
-            nzSortKey="sdgCode"
+            nzShowFilter
+            nzColumnKey="sdgCode"
             nz-tooltip
             nzTooltipTitle="SDG Code"
-            nzWidth="100px"
+            nzWidth="10%"
+            nzShowFilter
+            [nzFilters]="searchFilter.sdgCode"
+            [nzFilterFn]="filterSDGCode"
           >
             SDG Code
           </th>
-          <th nz-tooltip nzTooltipTitle="Keyword Frequency" nzWidth="100px">
+          <th nz-tooltip nzTooltipTitle="Keyword Frequency" nzWidth="10%" *ngIf="showKeywordCol">
             Keyword Frequency
             <nz-slider
               (nzOnAfterChange)="onAfterChange($event)"
@@ -168,21 +192,21 @@
               (nzCheckedChange)="refreshStatus()"
             ></td>
             <td>
-              <nz-tag [nzColor]="data.color">{{ data.level }} </nz-tag>
+              <nz-tag [nzColor]="data.indicator.color">{{ data.indicator.level }} </nz-tag>
             </td>
-            <td>{{ data.name }}</td>
-            <td>{{ data.source }}</td>
+            <td>{{ data.indicator.name }}</td>
+            <td>{{ data.indicator.source }}</td>
             <td style="text-align: center;">
               <div style="text-align: center;">
                 <i
-                  *ngIf="!data.disaggregation"
+                  *ngIf="!data.indicator.disaggregation"
                   style="font-size: 25px; color: rgb(216, 126, 126);"
                   nz-icon
                   nzType="close"
                   nzTheme="outline"
                 ></i>
                 <i
-                  *ngIf="data.disaggregation"
+                  *ngIf="data.indicator.disaggregation"
                   style="font-size: 25px; color: #a5c2ae;"
                   nz-icon
                   nzType="check"
@@ -190,10 +214,10 @@
                 ></i>
               </div>
             </td>
-            <td>{{ data.themes }}</td>
-            <td>{{ formatCrsCode(data.crsCode) }}</td>
-            <td>{{ data.sdgCode }}</td>
-            <td>{{ data.numTimes }}</td>
+            <td>{{ data.indicator.themes }}</td>
+            <td>{{ formatCrsCode(data.indicator.crsCode) }}</td>
+            <td>{{ data.indicator.sdgCode }}</td>
+            <td *ngIf="showKeywordCol">{{ data.indicator.numTimes }}</td>
           </tr>
         </ng-template>
       </tbody>
