--- a/src/app/pages/indicator/selectdocument/selectdocument.component.scss
+++ b/src/app/pages/indicator/selectdocument/selectdocument.component.scss
@@ -1,15 +1,40 @@
-.uploadArea{
+.flex-container {
+    position: static;
+    width: 100%;
+    display: flex;
+    align-items: stretch;
+    flex-direction: row;
+}
+
+.flex-container > div {
+    width: 20%;
+    margin: 10px 10px 0px 10px;
+    text-align: left;
+}
+
+.flex-container nz-select {
+    width: 100%;
+}
+
+.uploadArea {
     position: absolute;
     top: 3rem;
     left: 0rem;
     height: 20rem;
     max-width: 61.5rem;
-    //border: .25rem dashed #C6C6C5;
+    border: .25rem dashed #C6C6C5;
+    background-color: rgba(242, 242, 242, 0.7);
 }
 
+//TODO: ng-deep is depecrated http://angular.io/guide/component-styles#deprecated-deep--and-ng-deep
 ::ng-deep .ant-upload.ant-upload-drag {
     border: none;
 }
+
+::ng-deep .ant-upload {
+    padding: 0px !important;
+}
+
 /*
 @media only screen and (max-width: 48.5rem) {
     .uploadArea{
@@ -24,45 +49,48 @@
     }
   }
 */
-.uploadIcon{
-    background: #A5C2AE;
+.uploadIcon {
+    background: #a5c2ae;
     padding: 12px;
     border-radius: 1rem;
     font-size: 4rem;
-    color: #FFFFFF;
+    color: #ffffff;
 }
-.uploadText{
+
+.uploadText {
     padding-top: 2rem;
     padding-bottom: 1rem;
-    min-height: 20rem; 
+    min-height: 20rem;
     background-color: rgba(242, 242, 242, 0.7);
-    border: .25rem dashed #C6C6C5;
-    margin: auto; 
+    margin: auto;
 }
-.ant-upload-text{
+
+.ant-upload-text {
     padding-top: 1rem;
-    font-family:montserrat, sans-serif;
+    font-family: montserrat, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
     line-height: 20px;
     text-transform: uppercase;
 }
-.disclaimer{
+
+.disclaimer {
     padding-top: 2rem;
     position: relative;
     width: 60%;
     max-height: 8rem;
     overflow-x: hidden;
     overflow-y: auto;
-    display: inline-block
+    display: inline-block;
 }
-.disclaimerText{
-    font-family:montserrat, sans-serif;
+
+.disclaimerText {
+    font-family: montserrat, sans-serif;
     text-align: left;
     padding: 1rem;
-    background: #FFFFFF;
-    font-size: .7rem;
+    background: #ffffff;
+    font-size: 0.7rem;
     line-height: 11px;
 }
 /*
@@ -71,3 +99,11 @@ nz-upload{
     border: .25rem dashed #C6C6C5;
 }
 */
+::ng-deep nz-progress div.ant-progress-circle {
+    padding-bottom: 10%;
+}
+
+h2 {
+    font-family: montserrat, sans-serif;
+    padding: 1rem 0 1rem 0;
+}
