--- a/src/app/pages/indicator/downloadresult/downloadresult.component.scss
+++ b/src/app/pages/indicator/downloadresult/downloadresult.component.scss
@@ -12,7 +12,15 @@ a {
     margin-top: 20px;
 }
 
-#downloadExcel {
-    margin-left: 40px;
-    margin-right: 40px;
+.center-item {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.start-item {
+    margin-right: 20px;
+}
+
+.end-item {
+    margin-left: 20px;
 }
