--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -18,14 +18,14 @@
       <div class="stepInfo">
         <p class="stepPara">
           First, either upload a single Word document here (.doc or .docx).
-          You can use your grant or project funding application file for this purpose. 
+          You can use your grant or project funding application file for this purpose.
           <br/><br/>
           You can also start without a file upload and just access the entire database of indicators.
           <br/><br/>
           You can select the theme(s) that best apply to the subject of your project to limit the results.
           You may select as many themes as you want.
           <br/><br/>
-          Note: If you are unsure which themes are relevant, don't worry – 
+          Note: If you are unsure which themes are relevant, don't worry –
           you'll be able to add more filters in the next step.
       </div>
       <a (click)="clickClose()">Close</a>
@@ -53,7 +53,7 @@
           Here are the suggested indicators for you, based on the keywords in your
           document and the themes selected. Indicators are categorised as Impacts,
           Outcomes, or Outputs. If you have not uploaded a document, we are showing
-          you all indicators that matched your filter criteria. 
+          you all indicators that matched your filter criteria.
           <br/><br/>
           Select the indicators you want to use to track the success of your project,
           then click Next.
@@ -99,6 +99,7 @@
       class="steps-button"
       nzType="default"
       (click)="next()"
+      [hidden]="current === 3"
     >
       <span>Next</span>
     </button>
