--- a/src/app/manage-indicators/manage-indicators.component.html
+++ b/src/app/manage-indicators/manage-indicators.component.html
@@ -33,14 +33,14 @@
     <tbody>
     <tr *ngFor="let ind of indicators.data">
       <td>{{ind.id}}</td>
-      <td>{{ind.crsCode}}</td>
+      <td>{{printArray(ind.crsCode, 'name')}}</td>
       <td>{{ind.dataSource}}</td>
       <td>{{ind.description}}</td>
       <td>{{ind.disaggregation}}</td>
       <td>{{ind.keywords}}</td>
       <td>{{ind.name}}</td>
-      <td>{{ind.sdgCode}}</td>
-      <td>{{ind.source}}</td>
+      <td>{{printArray(ind.sdgCode, 'name')}}</td>
+      <td>{{printArray(ind.source, 'name')}}</td>
       <td>{{ind.sourceVerification}}</td>
       <td>{{ind.themes}}</td>
       <td>{{ind.level.name}}</td>
