--- a/src/app/pages/indicator/selectdocument/selectdocument.component.html
+++ b/src/app/pages/indicator/selectdocument/selectdocument.component.html
@@ -26,7 +26,7 @@
         >
           <nz-option
             *ngFor="let option of filterOptions.source"
-            [nzLabel]="option"
+            [nzLabel]="option.name"
             [nzValue]="option"
             [nzHide]="!isNotSelected('source', option)"
           ></nz-option>
@@ -42,7 +42,7 @@
         >
           <nz-option
             *ngFor="let option of filterOptions.sdgCode"
-            [nzLabel]="option"
+            [nzLabel]="option.name"
             [nzValue]="option"
             [nzHide]="!isNotSelected('sdgCode', option)"
           ></nz-option>
@@ -75,7 +75,7 @@
         >
           <nz-option
             *ngFor="let option of filterOptions.crsCode"
-            [nzLabel]="option"
+            [nzLabel]="option.name"
             [nzValue]="option"
             [nzHide]="!isNotSelected('crsCode', option)"
           ></nz-option>
