--- a/src/app/pages/indicator/downloadresult/downloadresult.component.scss
+++ b/src/app/pages/indicator/downloadresult/downloadresult.component.scss
@@ -1,6 +1,6 @@
 div {
     flex-direction: row;
-    display: inline-flex;
+    //display: inline-flex;
     margin: 50px;
     min-height: 300px;
 }
