minimum default range starts at 10

--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -193,6 +193,7 @@
               [nzRange]="true"
               [nzMin]="sliderMinValue"
               [nzMax]="sliderMaxValue"
+              [ngModel]="[10, sliderMaxValue]"
             ></nz-slider>
           </th>
         </tr>
