--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -18,7 +18,7 @@
     </nz-form-item>
     <nz-form-item>
       <nz-form-control>
-        <button nz-button nzType="primary" [disabled]="!loginForm.valid" class="login-button" type="submit">Login</button>
+        <button nz-button nzType="primary" [disabled]="!loginForm.valid" class="login-button default-button" type="submit">Login</button>
       </nz-form-control>
     </nz-form-item>
   </form>
