Fix copyright label

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
         href="http://arqaam.org"
         target="_blank"
       >
-        Logframe Lab ©2020 developed By Arqaam GmbH
+        Logframe Lab ©2020 developed by Arqaam GmbH
       </a>
     </div>
   </nz-footer>
