--- a/src/app/manage-indicators/crud-indicator/crud-indicator.component.html
+++ b/src/app/manage-indicators/crud-indicator/crud-indicator.component.html
@@ -89,11 +89,11 @@
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
-          <nz-form-label [nzSpan]="7" nzFor="themes"><label for="themes">Themes</label>
+          <nz-form-label [nzSpan]="7" nzFor="sector"><label for="sector">Sector</label>
           </nz-form-label>
           <nz-form-control [nzSpan]="12">
-            <input nz-input [(ngModel)]="indicator.themes" id="themes" name="themes"
-                   placeholder="Themes" [disabled]="!(isEditing() || isNew())">
+            <input nz-input [(ngModel)]="indicator.sector" id="sector" name="sector"
+                   placeholder="Sector" [disabled]="!(isEditing() || isNew())">
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
