--- a/src/app/manage-indicators/manage-indicators.component.html
+++ b/src/app/manage-indicators/manage-indicators.component.html
@@ -25,7 +25,7 @@
       <th nzShowFilter [nzFilters]="sdgCodeFilter" (nzFilterChange)="addFilter('sdgCode', $event)">SDG Code</th>
       <th nzShowFilter [nzFilters]="sourceFilter" (nzFilterChange)="addFilter('source', $event)">Source</th>
       <th>Source Verification</th>
-      <th nzShowFilter [nzFilters]="themeFilter" (nzFilterChange)="addFilter('themes', $event)">Themes</th>
+      <th nzShowFilter [nzFilters]="themeFilter" (nzFilterChange)="addFilter('sector', $event)">Sector</th>
       <th nzShowFilter [nzFilters]="levelFilter" (nzFilterChange)="addFilter('levelIds', $event)">Level</th>
       <th>Actions</th>
     </tr>
@@ -42,7 +42,7 @@
       <td>{{ind.sdgCode}}</td>
       <td>{{ind.source}}</td>
       <td>{{ind.sourceVerification}}</td>
-      <td>{{ind.themes}}</td>
+      <td>{{ind.sector}}</td>
       <td>{{ind.level.name}}</td>
       <td>
         <div>
