--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -139,15 +139,15 @@
           </th>
           <th
             nzShowSort
-            nzColumnKey="themes"
+            nzColumnKey="sector"
             nzWidth="10%"
             nz-popover
             nzPopoverTitle="Thematic Area"
             nzPopoverContent="The sectors where the indicator is related to."
             nzBreakWord
             nzShowFilter
-            [nzFilters]="searchFilter.themes"
-            [nzFilterFn]="filterThemes"
+            [nzFilters]="searchFilter.sector"
+            [nzFilterFn]="filterSector"
           >
             Thematic Area
           </th>
@@ -234,7 +234,7 @@
                 ></i>
               </div>
             </td>
-            <td>{{ data.indicator.themes }}</td>
+            <td>{{ data.indicator.sector }}</td>
             <td>{{ formatCrsCode(data.indicator.crsCode) }}</td>
             <td>{{ data.indicator.sdgCode }}</td>
             <td *ngIf="showKeywordCol">{{ data.indicator.numTimes }}</td>
