Change E2E testing from protractor to cypress.

--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -100,6 +100,7 @@
       nzType="default"
       (click)="next()"
       [hidden]="current === 3"
+      id="nextButton"
     >
       <span>Next</span>
     </button>
