Incorporated logic chain functionality including download as svg & png

--- a/src/app/pages/indicator/downloadresult/downloadresult.component.html
+++ b/src/app/pages/indicator/downloadresult/downloadresult.component.html
@@ -22,4 +22,14 @@
     Download Indicators Excel<br />
     (DFID format)
   </a>
+  <a class='start-item' (click)="download('svg')">
+    <img src="assets/svg.svg" style="width: 80px;margin-top: 7px;height: 80px;margin-bottom: 5px;" /><br />
+    <i nz-icon nzType="download"></i>
+    Download Indicators Svg
+  </a>
+  <a class='start-item' (click)="download('png')">
+    <img src="assets/png.svg" style="width: 80px;margin-top: 7px;height: 80px;margin-bottom: 5px;" /><br />
+    <i nz-icon nzType="download"></i>
+    Download Indicators Png
+  </a>
 </div>
