--- a/src/app/pages/indicator/visualisationresult/visualisationresult.component.html
+++ b/src/app/pages/indicator/visualisationresult/visualisationresult.component.html
@@ -1,4 +1,10 @@
 <div style="min-height: 300px;">
-  <img style="margin-top: 50px;" src="assets/waiting2.png" />
-  <h3 style="margin-top: 20px;">COMING SOON</h3>
+  <!-- <img style="margin-top: 50px;" src="assets/waiting2.png" />
+  <h3 style="margin-top: 20px;">COMING SOON</h3> -->
+  
+  <div class="row">
+    <div class="draw2d" [style.height]="height">
+        <div onselectstart="javascript:/*IE8 hack*/return false" id="gfx_holder" style="width:2500px; height:1000px;position: absolute;left: 0;"></div>
+    </div>
+  </div>
 </div>
