--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: "Montserrat";
+  src: url('./assets/Montserrat/Montserrat-Regular.ttf');
+}
+
+
 app-selectdocument {
   .ant-upload.ant-upload-drag .ant-upload-btn{
    // min-height: 300px !important;
@@ -131,4 +137,38 @@ a:hover{
 }
 body, html {
   overflow: hidden;
+}
+
+.tooltip {
+	position: absolute;
+	background: #88b7d5;
+	border: 2px solid #c2e1f5;
+	padding:10px;
+	border-radius:6px;
+}
+
+.tooltip:after,.tooltip:before {
+	bottom: 100%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.tooltip:after {
+	border-color: rgba(136, 183, 213, 0);
+	border-bottom-color: #88b7d5;
+	border-width: 4px;
+	left: 50%;
+	margin-left: -4px;
+}
+
+.tooltip:before {
+	border-color: rgba(194, 225, 245, 0);
+	border-bottom-color: #c2e1f5;
+	border-width: 8px;
+	left: 50%;
+	margin-left: -8px;
 }
